# Dummy-Bot

./: .env.example  .gitignore  Cargo.toml  README.md  deploy.sh
src/: config.rs  database.rs  error.rs  i18n.rs  lib.rs  main.rs
src/commands/: administration.rs  general.rs  logging.rs  mod.rs  moderation.rs  music.rs  presence.rs
src/commands/global/: mod.rs
src/commands/global/everyone/: botinfo.rs  mod.rs  ping.rs
src/commands/global/owner/: mod.rs  presence.rs
src/commands/guild/: mod.rs
src/commands/guild/admin/: language.rs  mod.rs  setprefix.rs  settings.rs
src/commands/guild/everyone/: mod.rs  music.rs  serverinfo.rs  voice.rs
src/commands/guild/moderator/: ban.rs  kick.rs  mod.rs  purge.rs
src/handlers/: message_log.rs  mod.rs  reconnect.rs  voice.rs
systemd/: discord-bot.service
