[package]
name = "rust_discord_bot"
version = "0.1.0"
edition = "2024"
description = "High-performance modular Discord bot in Rust"

[dependencies]
# Discord framework
poise = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database (SQLite)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Error handling
anyhow = "1"

# Environment variables
dotenv = "0.15"

# Chrono for timestamps
chrono = "0.4"

# HTTP client for downloading attachments
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Lazy static initialization
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
