[package]
name = "rust_discord_bot"
version = "0.1.0"
edition = "2024"
description = "High-performance modular Discord bot in Rust"

[dependencies]
# Discord framework
poise = "0.6.1"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Structured logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Database (SQLite)
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }

# Error handling
anyhow = "1.0.101"

# Environment variables
dotenvy = "0.15.7"

# Chrono for timestamps
chrono = "0.4.43"

# HTTP client for downloading attachments
reqwest = { version = "0.13.2", features = ["rustls"] }

# Voice support
songbird = "0.5.0"

# Rustls crypto provider (required for voice connections)
rustls = { version = "0.23.36", features = ["ring"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
